feat: added emoji support, remote ssh copy, jakt support, etc.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,9 @@
 # Native bindings changed
 
-# remap prefix from 'C-b' to 'M-a'
-set -g prefix Home
-unbind C-b
-bind-key Home send-prefix
+# add another prefix as Home
+set -g prefix M-a
+set -g prefix2 C-b
+# unbind C-b
 
 # split panes using | and -
 # bind | split-window -h
@@ -41,15 +41,15 @@ set -g status-right '%H:%M %d-%b-%y'
 # set -g status-utf8 on
 
 # switch panes using Alt-arrow without prefix(Now provided by tmux-tilish)
-bind h select-pane -L
-bind l select-pane -R
-bind k select-pane -U
-bind j select-pane -D
+# bind h select-pane -L
+# bind l select-pane -R
+# bind k select-pane -U
+# bind j select-pane -D
 
-# bind -n M-h select-pane -L
-# bind -n M-l select-pane -R
-# bind -n M-k select-pane -U
-# bind -n M-j select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -86,7 +86,19 @@ bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
 # Make strikethrough work in tmux
 set -as terminal-overrides ',xterm*:smxx=\E[9m'
 
-set -g @tilish-prefix 'Home'
+# set -g @tilish-prefix 'M'
+# set -g @tilish-prefix2 'C-b'
+
+bind -n M-0 select-window -t 0
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
 
 # Move windows by one position using shift-left shift-right
 bind-key -n S-Left swap-window -t -1
@@ -105,7 +117,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'wfxr/tmux-power'
 
 # WM type keybindings in tmux
-set -g @plugin 'jabirali/tmux-tilish'
+# set -g @plugin 'jabirali/tmux-tilish'
 
 # Miscellaneous
 set -g @plugin 'tmux-plugins/tmux-sidebar'
