feat: shift to neovim 0.8.1
- update from vim-plug to packer
- update from nvim-lsp-installer to mason and mason-lspconfig
- add small helper scripts for notifying when long tasks end
- remove lot of useless config
- integrate a subset of nvim-notify

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,7 +24,7 @@ setw -g monitor-activity on
 # set -g default-terminal "screen-256color"
 # set -g default-terminal "tmux-256color" # Causes problems in macos
 # # useful for fixing mismatching nvim colors while on Alacritty. Follow: https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6
-set -ag terminal-overrides ",xterm-256color:RGB"
+# set -ag terminal-overrides ",xterm-256color:RGB"
 # # set -g mouse on
 set -g history-limit 100000
 set-option -g default-shell /bin/zsh
@@ -56,7 +56,7 @@ setw -g pane-base-index 1
 set -g renumber-windows on		# renumber windows when a window is closed
 # setw -g mouse on
 set-window-option -g mode-keys vi # vi mode in tmux
-set-option -sa terminal-overrides ',screen-256color:RGB'
+# set-option -sa terminal-overrides ',screen-256color:RGB'
 
 # THEME SETTINGS
 
@@ -84,7 +84,13 @@ bind-key t set-option status
 bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
 
 # Make strikethrough work in tmux
-set -as terminal-overrides ',xterm*:smxx=\E[9m'
+# set -as terminal-overrides ',xterm*:smxx=\E[9m'
+
+set -g default-terminal xterm-256color
+set -ag terminal-overrides ",xterm*:RGB"
+# set -ga terminal-overrides ",*256col*:Tc"
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
 
 # set -g @tilish-prefix 'M'
 # set -g @tilish-prefix2 'C-b'
@@ -120,7 +126,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'jabirali/tmux-tilish'
 
 # Miscellaneous
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+# set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
