feat: new plugins in nvim
docker script enhance

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -110,6 +110,8 @@ bind -n M-9 select-window -t 9
 bind-key -n S-Left swap-window -t -1
 bind-key -n S-Right swap-window -t +1
 
+# TOOD: Maybe add a shortcut to take current window to 1 postition
+
 # LIST OF PLUGINS
 
 #Plugin Manager
