--- a/dockerfiles/dockerfiles/Makefile
+++ b/dockerfiles/dockerfiles/Makefile
@@ -1,2 +1,4 @@
-rabbitmq:
+rabbitmq_run:
+	docker run -p 5672:5672 -p 15672:15672 rabbitmq-local
+rabbitmq_build:
 	docker run -p 5672:5672 -p 15672:15672 rabbitmq-local
