--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -88,9 +88,10 @@ bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
 
 set -g default-terminal xterm-256color
 set -ag terminal-overrides ",xterm*:RGB"
+# set -g default-terminal "screen-256color" # These do no work, tested on tokyonight-night
+# set -ag terminal-overrides ",xterm-256color:RGB" # These do no work, tested on tokyonight-night
 # set -ga terminal-overrides ",*256col*:Tc"
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
-
 
 # set -g @tilish-prefix 'M'
 # set -g @tilish-prefix2 'C-b'
