fix: correctly comment line using `#` instead of `"`

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,8 @@ bind X kill-session
 #reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
-setw -g monitor-activity off " Kept it as off coz it causes annoying bell noises in terminal whenever something changes in htop ( which is ever changing )
+set-option -g monitor-activity off # Kept it as off coz it causes annoying bell noises in terminal whenever something changes in htop ( which is ever changing )
+
 # set -g default-terminal "screen-256color"
 # set -g default-terminal "tmux-256color" # Causes problems in macos
 # # useful for fixing mismatching nvim colors while on Alacritty. Follow: https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6
