--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,9 @@
+# unbind-key -a
+
+# NOTE:
+# - Do not change `bind-key -nr/bind-key -r`, usage
+# It has caused bugs like word wise jump not working and instead causing some other tangential action.
+
 # Native bindings changed
 
 # add another prefix as Home
@@ -6,19 +12,16 @@ set -g prefix2 C-b
 # unbind C-b
 
 # split panes using | and -
-# bind | split-window -h
-# bind - split-window -v
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+bind-key | split-window -h
+bind-key - split-window -v
+unbind-key '"'
+unbind-key %
 
-# bind-key M-f resize-pane -Z
-bind -n M-f resize-pane -Z
-bind X kill-session
+bind-key -r M-f resize-pane -Z
+bind-key X kill-session
 
 #reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind-key -r r source-file ~/.tmux.conf
 
 set-option -g monitor-activity off # Kept it as off coz it causes annoying bell noises in terminal whenever something changes in htop ( which is ever changing )
 
@@ -39,16 +42,10 @@ set -g status-right '%H:%M %d-%b-%y'
 # enable utf-8 on status bar
 # set -g status-utf8 on
 
-# switch panes using Alt-arrow without prefix(Now provided by tmux-tilish)
-# bind h select-pane -L
-# bind l select-pane -R
-# bind k select-pane -U
-# bind j select-pane -D
-
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+bind-key -nr M-h select-pane -L
+bind-key -nr M-l select-pane -R
+bind-key -nr M-k select-pane -U
+bind-key -nr M-j select-pane -D
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -56,28 +53,9 @@ set -g renumber-windows on		# renumber windows when a window is closed
 # setw -g mouse on
 set-window-option -g mode-keys vi # vi mode in tmux
 
-# THEME SETTINGS
-
-# Dracula theme tmux
-# set -g @dracula-cpu-usage true # Show CPU usage functionality in from dracula config
-# set -g @dracula-ram-usage true # Show RAM usage functionality in from dracula config
-# set -g @dracula-show-weather false # Hide weather functionality in from dracula config
-# set -g @dracula-show-network false # Hide internet connection functionality in from dracula config
-
-# tmux-colors-solarized settings
-# set -g @colors-solarized 'dark'
-
-# Tmux powerline theme
-# Possible colors: sky, coral, snow, violet, forest, moon, redwine, gold, or set custom color: '#483D8B'
-# set -g @tmux_power_theme 'forest'
-
 # MISCELLANEOUS PLUGINS SETTINGS
 
-# Set git status in tmux status panel: Plugin: tmux-simple-git-status
-# set -g status-left ""
-# set -g status-right "#{simple_git_status}"
-# set -g status-interval 5
-bind-key t set-option status
+bind-key -r t set-option status
 
 bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
 
@@ -91,23 +69,20 @@ set -ag terminal-overrides ",xterm*:RGB"
 # set -ga terminal-overrides ",*256col*:Tc"
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 
-# set -g @tilish-prefix 'M'
-# set -g @tilish-prefix2 'C-b'
-
-bind -n M-0 select-window -t 0
-bind -n M-1 select-window -t 1
-bind -n M-2 select-window -t 2
-bind -n M-3 select-window -t 3
-bind -n M-4 select-window -t 4
-bind -n M-5 select-window -t 5
-bind -n M-6 select-window -t 6
-bind -n M-7 select-window -t 7
-bind -n M-8 select-window -t 8
-bind -n M-9 select-window -t 9
+bind-key -nr M-0 select-window -t 0
+bind-key -nr M-1 select-window -t 1
+bind-key -nr M-2 select-window -t 2
+bind-key -nr M-3 select-window -t 3
+bind-key -nr M-4 select-window -t 4
+bind-key -nr M-5 select-window -t 5
+bind-key -nr M-6 select-window -t 6
+bind-key -nr M-7 select-window -t 7
+bind-key -nr M-8 select-window -t 8
+bind-key -nr M-9 select-window -t 9
 
 # Move windows by one position using shift-left shift-right
-bind-key -n S-Left swap-window -t -1
-bind-key -n S-Right swap-window -t +1
+bind-key S-Left swap-window -t -1
+bind-key S-Right swap-window -t +1
 
 # TOOD: Maybe add a shortcut to take current window to 1 postition
 
@@ -116,20 +91,9 @@ bind-key -n S-Right swap-window -t +1
 #Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
-#Themes
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# set -g @plugin 'dracula/tmux'
-# set -g @plugin 'wfxr/tmux-power'
-
-# WM type keybindings in tmux
-# set -g @plugin 'jabirali/tmux-tilish'
-
 # Miscellaneous
 # set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
 # set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 
@@ -141,3 +105,25 @@ run -b '~/.tmux/plugins/tpm/tpm'
 # prefix+I : Install new plugins
 # prefix+U : Upgrade plugins
 # prefix+alt+u : Uninstall plugins not in list
+
+# =======
+# tmux-sensible pasted here
+# https://github.com/tmux-plugins/tmux-sensible/blob/master/sensible.tmux
+
+# address vim mode switching delay (http://superuser.com/a/252717/65504)
+set-option -s escape-time 0
+
+# tmux messages are displayed for 4 seconds
+set-option -g display-time 4000
+
+# refresh 'status-left' and 'status-right' more often
+set-option -g status-interval 5
+
+# focus events enabled for terminals that support them
+set-option -g focus-events on
+
+# super useful when using "grouped sessions" and multi-monitor setup
+set-window-option -g aggressive-resize on
+# =======
+# TODO: see if we can vendor in tmux-yank too, if we can let's remove tpm itself
+# =======
