--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@ bind-key - split-window -v
 unbind-key '"'
 unbind-key %
 
-bind-key -r M-f resize-pane -Z
+bind-key -r f resize-pane -Z # Do not bind this to `n`, it somehow also enables M-Right to zoom, which breaks word navigation in tmux
 bind-key X kill-session
 
 #reload config file (change file location to your the tmux.conf you want to use)
